// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"// @ts-ignore
~~~~~~~~~~~~~ Use "@ts-expect-error" to ensure an error is actually being suppressed.
const str: string = 1;

/**
~~~~~~~~~~~~~~~~ Use "@ts-expect-error" to ensure an error is actually being suppressed.
 * Explaining comment
~~~~~~~~~~~~~~~~~~~~~
 *
~~
 * @ts-ignore */
~~~~~~~~~~~~~~~~
const multiLine: number = 'value';

/** @ts-ignore */
~~~~~~~~~~~~~~~~~ Use "@ts-expect-error" to ensure an error is actually being suppressed.
const block: string = 1;

const isOptionEnabled = (key: string): boolean => {
  // @ts-ignore: if key isn't in globalOptions it'll be undefined which is false
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Use "@ts-expect-error" to ensure an error is actually being suppressed.
  return !!globalOptions[key];
};
"
`;

exports[` 2`] = `
"// @ts-expect-error
const str: string = 1;

/**
 * Explaining comment
 *
 * @ts-expect-error */
const multiLine: number = 'value';

/** @ts-expect-error */
const block: string = 1;

const isOptionEnabled = (key: string): boolean => {
  // @ts-expect-error: if key isn't in globalOptions it'll be undefined which is false
  return !!globalOptions[key];
};
"
`;
